# default-esp32-r

./: Cargo.toml  README.md  build.rs  cfg.toml  export-esp.sh  qemu.sh  sdkconfig.debug  sdkconfig.defaults  sdkconfig.release
.cargo/: config.toml
common/: .gitignore  Cargo.toml
common/src/: events.rs  lib.rs  store.rs
common/src/events/: wifi.rs
common/src/store/: storeable.rs
src/: connection.rs  demos.rs  eventhandler.rs  eventsystem.rs  main.rs  neopixel.rs  store.rs  strip.rs
src/common/: time.rs
src/connection/: api.rs  client.rs  server.rs  wifi.rs
src/demos/: tcp.rs
src/eventsystem/: api.rs
src/neopixel/: effects.rs  strip.rs
src/neopixel/effects/: alarm.rs  hue.rs  invert.rs  solid.rs  strobo.rs
src/neopixel/strip/: color.rs
src/neopixel/strip/color/: f.rs  i.rs
src/strip/: color.rs
