[package]
name = "espoxi2"
version = "0.1.0"
authors = ["HannesH <33062605+HannesGitH@users.noreply.github.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-hal = "0.2.7"
esp-idf-hal = "0.38.1"
esp-idf-svc = "0.42.5"
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }


[build-dependencies]
embuild = "0.30"
anyhow = "1"
