[package]
name = "espoxi2"
version = "0.1.0"
authors = ["HannesH <33062605+HannesGitH@users.noreply.github.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-hal = "=1.0.0-alpha.9"
embedded-svc = { version = "0.23", git = "https://github.com/esp-rs/embedded-svc", features = ["experimental"] }
esp-idf-sys = { version = "0.31.11", features = ["binstart"]}
esp-idf-hal = { version = "0.39", features = ["esp-idf-sys"], git = "https://github.com/esp-rs/esp-idf-hal" }
toml-cfg = "0.1.3"
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", version = "0.43.0", features = ["experimental"]}
anyhow = "1"
esp32 = "0.15.0"
log = "0.4.17"
heapless = "0.7.16"


[build-dependencies]
embuild = "0.30"
anyhow = "1"
